test/org/midica/testfiles/failing/function-open-at-eof.midica
INCLUDE inc/instruments.midica

FUNCTION test
	0 c /4
	0 d /4
